@@ -63,6 +63,7 @@ Latest changes:
     * remove AVM's NAS webinterface and internal memory file
     * remove 7170 (unneeded) piglet bitfile
     * remove AVM's webdav
+    * remove AVM's printserv & usblp
 
 - New packages, libs, modules:
     * aiccu 20070115
